# crack-addr-seeker

./: .gitignore  Cargo.toml  README.md  build.sh  eth_addresses.csv  eth_addresses_20240723182621.csv  eth_addresses_20240723192829.csv  eth_addresses_20240723194640.csv  eth_addresses_20240723195322.csv  eth_addresses_20240723204443.csv  tron_addresses.csv  tron_addresses_20240723182621.csv  tron_addresses_20240723192829.csv  tron_addresses_20240723194640.csv  tron_addresses_20240723195322.csv  tron_addresses_20240723204443.csv
src/: address.rs  config.rs  constant.rs  handle.rs  language.rs  lib.rs  main.rs  timer.rs  write.rs  xpriv.rs
src/address/: eth.rs  mod.rs  trx.rs
